--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.3.2",
     "chartjs-plugin-zoom": "^1.0.1",
+    "hamburger-react": "^2.4.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
