--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "chartjs-plugin-zoom": "^1.0.1",
     "hamburger-react": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "html-to-text": "^6.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
